==> ScarsFun/STM32F1_ST7789_LL_DMA/Src/st7789.c <==
#include <st7789.h>
#include "stdlib.h"
#define TFT_BL_H() LL_GPIO_SetOutputPin(ST7789_CS_GPIO_Port, ST7789_BL_Pin)
#define TFT_BL_L() LL_GPIO_ResetOutputPin(ST7789_CS_GPIO_Port, ST7789_BL_Pin)
#define TFT_CS_H() LL_GPIO_SetOutputPin(ST7789_CS_GPIO_Port, ST7789_CS_Pin)
#define TFT_CS_L() LL_GPIO_ResetOutputPin(ST7789_CS_GPIO_Port, ST7789_CS_Pin)
#define TFT_DC_D() LL_GPIO_SetOutputPin(ST7789_CS_GPIO_Port, ST7789_DC_Pin)
#define TFT_DC_C() LL_GPIO_ResetOutputPin(ST7789_CS_GPIO_Port, ST7789_DC_Pin)
#define TFT_RES_H() LL_GPIO_SetOutputPin(ST7789_CS_GPIO_Port, ST7789_RES_Pin)
#define TFT_RES_L() LL_GPIO_ResetOutputPin(ST7789_CS_GPIO_Port, ST7789_RES_Pin)
#define SWAP_INT16_T(a, b) \
    {                      \
        int16_t t = a;     \
        a = b;             \
        b = t;             \
    }
#define DELAY 0x80

static void ST7789_Reset()
{
    TFT_RES_L();
    LL_mDelay(20);
    TFT_RES_H();
}

static void ST7789_WriteCommand(uint8_t cmd)
{
    TFT_DC_C();
    Send_Data8(cmd);
}

static void ST7789_WriteData(uint8_t* buff, size_t buff_size)
{

    TFT_DC_D();

    for (uint16_t index = 0; index < buff_size; index++) {
        Send_Data8(buff[index]);
    }
}

void ST7789_DrawPixel(uint16_t x, uint16_t y, uint16_t color)
{
    if ((x >= _width) || (y >= _height))
        return;

    TFT_CS_L();

    ST7789_SetAddressWindow(x, y, x + 1, y + 1);
    uint8_t data[] = { color >> 8, color & 0xFF };
    ST7789_WriteData(data, sizeof(data));

    TFT_CS_H();
}

void ST7789_FillRectangle(uint16_t x, uint16_t y, uint16_t w, uint16_t h, uint16_t color)
{
    // clipping
    if ((x >= _width) || (y >= _height))
        return;
    if ((x + w - 1) >= _width)
        w = _width - x;
    if ((y + h - 1) >= _height)
        h = _height - y;

    TFT_CS_L();
    ST7789_SetAddressWindow(x, y, x + w - 1, y + h - 1);
    TFT_DC_D();
    LL_DMA_SetMemoryIncMode(DMA1, LL_DMA_CHANNEL_3, LL_DMA_MEMORY_NOINCREMENT);
    uint16_t tbuf = color;
    Send_DMA_Data16(&tbuf, w * h);
    LL_DMA_SetMemoryIncMode(DMA1, LL_DMA_CHANNEL_3, LL_DMA_MEMORY_INCREMENT);
    TFT_CS_H();

    /*
    TFT_DC_D();
    uint16_t tbuf[w];
    for (int x = w ; x >= 0; x--) 
            tbuf[x] = color;
    for (y = h; y > 0; y--) 
        Send_DMA_Data16(tbuf,sizeof(tbuf)/2);
    TFT_CS_H();
    */
}

void ST7789_FillScreen(uint16_t color)
{
    ST7789_FillRectangle(0, 0, _width, _height, color);
}

void ST7789_DrawRoundRect(int16_t x, int16_t y, int16_t w, int16_t h, int16_t r, uint16_t color)
{
    // smarter version
    ST7789_DrawFastHLine(x + r, y, w - r - r, color); // Top
    ST7789_DrawFastHLine(x + r, y + h - 1, w - r - r, color); // Bottom
    ST7789_DrawFastVLine(x, y + r, h - r - r, color); // Left
    ST7789_DrawFastVLine(x + w - 1, y + r, h - r - r, color); // Right
    // draw four corners
    ST7789_DrawCircleHelper(x + r, y + r, r, 1, color);
    ST7789_DrawCircleHelper(x + r, y + h - r - 1, r, 8, color);
    ST7789_DrawCircleHelper(x + w - r - 1, y + r, r, 2, color);
    ST7789_DrawCircleHelper(x + w - r - 1, y + h - r - 1, r, 4, color);
}

void ST7789_FillTriangle(int16_t x0, int16_t y0, int16_t x1, int16_t y1, int16_t x2, int16_t y2, uint16_t color)
{
    int16_t a, b, y, last;

    // Sort coordinates by Y order (y2 >= y1 >= y0)
    if (y0 > y1) {
        SWAP_INT16_T(y0, y1);
        SWAP_INT16_T(x0, x1);
    }

    if (y1 > y2) {
        SWAP_INT16_T(y2, y1);
        SWAP_INT16_T(x2, x1);
    }

    if (y0 > y1) {
        SWAP_INT16_T(y0, y1);
        SWAP_INT16_T(x0, x1);
    }

    if (y0 == y2) { // Handle awkward all-on-same-line case as its own thing
        a = b = x0;
        if (x1 < a)
            a = x1;
        else if (x1 > b)
            b = x1;
        if (x2 < a)
            a = x2;
        else if (x2 > b)
            b = x2;
        ST7789_DrawFastHLine(a, y0, b - a + 1, color);
        return;
    }

    int16_t
        dx01 = x1 - x0,
        dy01 = y1 - y0,
        dx02 = x2 - x0,
        dy02 = y2 - y0,
        dx12 = x2 - x1,
        dy12 = y2 - y1,
        sa = 0,
        sb = 0;

    // For upper part of triangle, find scanline crossings for segments
    // 0-1 and 0-2.  If y1=y2 (flat-bottomed triangle), the scanline y1
    // is included here (and second loop will be skipped, avoiding a /0
    // error there), otherwise scanline y1 is skipped here and handled
    // in the second loop...which also avoids a /0 error here if y0=y1
    // (flat-topped triangle).
    if (y1 == y2)
        last = y1; // Include y1 scanline
    else
        last = y1 - 1; // Skip it

    for (y = y0; y <= last; y++) {
        a = x0 + sa / dy01;
        b = x0 + sb / dy02;
        sa += dx01;
        sb += dx02;

        if (a > b)
            SWAP_INT16_T(a, b);
        ST7789_DrawFastHLine(a, y, b - a + 1, color);
    }

    // For lower part of triangle, find scanline crossings for segments
    // 0-2 and 1-2.  This loop is skipped if y1=y2.
    sa = dx12 * (y - y1);
    sb = dx02 * (y - y0);
    for (; y <= y2; y++) {
        a = x1 + sa / dy12;
        b = x0 + sb / dy02;
        sa += dx12;
        sb += dx02;

        if (a > b)
            SWAP_INT16_T(a, b);
        ST7789_DrawFastHLine(a, y, b - a + 1, color);
    }
}

void ST7789_DrawChar(char ch, const uint8_t font[], uint16_t X, uint16_t Y, uint16_t color, uint16_t bgcolor)
{
    if ((ch < 31) || (ch > 127))
        return;

    uint8_t fOffset, fWidth, fHeight, fBPL;
    uint8_t* tempChar;

    fOffset = font[0];
    fWidth = font[1];
    fHeight = font[2];
    fBPL = font[3];

    tempChar = (uint8_t*)&font[((ch - 0x20) * fOffset) + 4]; /* Current Character = Meta + (Character Index * Offset) */

    /* Clear background first */
    ST7789_FillRectangle(X, Y, fWidth, fHeight, bgcolor);

    for (int j = 0; j < fHeight; j++) {
        for (int i = 0; i < fWidth; i++) {
            uint8_t z = tempChar[fBPL * i + ((j & 0xF8) >> 3) + 1]; /* (j & 0xF8) >> 3, increase one by 8-bits */
            uint8_t b = 1 << (j & 0x07);
            if ((z & b) != 0x00) {
                ST7789_DrawPixel(X + i, Y + j, color);
            }
        }
    }
}

void ST7789_DrawText(const char* str, const uint8_t font[], uint16_t X, uint16_t Y, uint16_t color, uint16_t bgcolor)
{
    uint8_t charWidth; /* Width of character */
    uint8_t fOffset = font[0]; /* Offset of character */
    uint8_t fWidth = font[1]; /* Width of font */

    while (*str) {
        ST7789_DrawChar(*str, font, X, Y, color, bgcolor);

        /* Check character width and calculate proper position */
        uint8_t* tempChar = (uint8_t*)&font[((*str - 0x20) * fOffset) + 4];
        charWidth = tempChar[0];

        if (charWidth + 2 < fWidth) {
            /* If character width is smaller than font width */
            X += (charWidth + 2);
        }
        else {
            X += fWidth;
        }

        str++;
    }
}
